--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Inicio_de_Sesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inicio de Sesion"
@@ -16,6 +16,7 @@
         tools:layout_editor_absoluteY="129dp" />
 
     <EditText
+        android:id="@+id/Ingresar_Contraseña"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textSize="18dp"
@@ -23,6 +24,7 @@
         tools:layout_editor_absoluteY="354dp" />
 
     <EditText
+        android:id="@+id/ingresar_usuario"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textSize="18dp"
@@ -30,6 +32,7 @@
         tools:layout_editor_absoluteY="272dp" />
 
     <TextView
+        android:id="@+id/Contraseña"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contraseña:"
@@ -38,6 +41,7 @@
         tools:layout_editor_absoluteY="368dp" />
 
     <TextView
+        android:id="@+id/Usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Usuario:"
@@ -46,14 +50,16 @@
         tools:layout_editor_absoluteY="286dp" />
 
     <Button
+        android:id="@+id/Ingresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingresar"
         android:textSize="18dp"
-        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteX="69dp"
         tools:layout_editor_absoluteY="466dp" />
 
     <Button
+        android:id="@+id/Crear_Usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Crear Usuario"
